--- a/src/main/webapp/WEB-INF/props/jdbc.props
+++ b/src/main/webapp/WEB-INF/props/jdbc.props
@@ -1,4 +1,4 @@
 jdbc.username=root
-jdbc.password=csedbadmin
+jdbc.password=lig050129!
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/smartfishing?autoReconnect=true&useSSL=false
